# ai-agents-102

./: .env.example  .gitignore  README.md  agent.py  categorizer.py  gmail_client.py  main.py  models.py  pyproject.toml  slack_notifier.py  tools.py
.github/workflows/: update_cinema_map.yml
agent_gmail/: agent.py  logging_config.py  main.py  slack_notifier.py  tools.py
agent_jobs/: README.md  adzuna_client.py  agent.py  logging_config.py  main.py  models.py  serpapi_client.py  test_serpapi.py  tools.py
agent_movie/: README.md  agent.py  kinoheld_client.py  logging_config.py  main.py  models.py  tools.py
webapp_movie/: README.md  cinemas.json  fetch_cinemas.py  index.html
